--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
           <button type="button" class="menu-btn" data-menu-open>
             <svg class="menu-btn-icon" width="32" height="22">
-              <use href="../images/customers .svg#icon-menu-btn"></use>
+              <use href="./images/customers .svg#icon-menu-btn"></use>
             </svg>
           </button>
         </nav>
@@ -63,7 +63,7 @@
       </div>
 
       <!------------------------MENU MOBILE------------------------------>
-      <div class="mob-menu" data-menu>
+      <div class="mob-menu is-hidden" data-menu>
         <div>
           <button type="button" class="mob-close-btn" data-menu-close>
             <svg class="modal-icon" width="8" height="8">
