--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <nav class="mob-menu-nav">
             <ul class="mob-menu-list list">
               <li class="mob-menu-item list">
-                <a class="mob-menu-text studio link" href="./index.html"
+                <a class="mob-menu-text current studio link" href="./index.html"
                   >Studio</a
                 >
               </li>
@@ -142,7 +142,7 @@
     <main>
       <!-- hero  -->
       <section class="hero">
-        <div class="container">
+        <div class="container section">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button" data-modal-open>
             Order Service
