--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <main>
       <!-- hero  -->
       <section class="hero">
-        <div class="container section">
+        <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button" data-modal-open>
             Order Service
